--- a/styles.css
+++ b/styles.css
@@ -12,25 +12,25 @@ Variables
 */
 
 :root {
-  /* dark shades of primary color*/
+  /* dark shades of primary color
   --clr-primary-1: hsl(205, 86%, 17%);
   --clr-primary-2: hsl(205, 77%, 27%);
   --clr-primary-3: hsl(205, 72%, 37%);
   --clr-primary-4: hsl(205, 63%, 48%);
   /* primary/main color */
-  --clr-primary-5: hsl(205, 78%, 60%);
-  /* lighter shades of primary color */
+  /* --clr-primary-5: hsl(205, 78%, 60%);
+  /* lighter shades of primary color 
   --clr-primary-6: hsl(205, 89%, 70%);
   --clr-primary-7: hsl(205, 90%, 76%);
   --clr-primary-8: hsl(205, 86%, 81%);
   --clr-primary-9: hsl(205, 90%, 88%);
-  --clr-primary-10: hsl(205, 100%, 96%);
+  --clr-primary-10: hsl(205, 100%, 96%); */
   /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
+  /* --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-2: hsl(211, 39%, 23%);
   --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
+  --clr-grey-4: hsl(209, 28%, 39%); */
+  /* grey used for paragraphs 
   --clr-grey-5: hsl(210, 22%, 49%);
   --clr-grey-6: hsl(209, 23%, 60%);
   --clr-grey-7: hsl(211, 27%, 70%);
@@ -42,9 +42,21 @@ Variables
   --clr-red-light: hsl(360, 71%, 66%);
   --clr-green-dark: hsl(125, 67%, 44%);
   --clr-green-light: hsl(125, 71%, 66%);
-  --clr-black: #222;
-  --ff-primary: 'Roboto', sans-serif;
-  --ff-secondary: 'Open Sans', sans-serif;
+  --clr-black: #222; */
+  --ff-primary: 'Source Sans Pro', sans-serif;
+  --ff-secondary: 'Source Code Pro', monospace ;
+  --fw-reg: 300;
+  --fw-bold: 900;
+
+  --clr-light: #fff;
+  --clr-dark: #303030;
+  --clr-accent: #16e0bd;
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
+
   --transition: all 0.3s linear;
   --spacing: 0.1rem;
   --radius: 0.25rem;
@@ -55,7 +67,7 @@ Variables
 }
 /*
 =============== 
-Global Styles
+Global Styles 
 ===============
 */
 
@@ -68,10 +80,16 @@ Global Styles
 }
 body {
   font-family: var(--ff-secondary);
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
-  line-height: 1.5;
-  font-size: 0.875rem;
+  background: var(--clr-light);
+  color: var(--clr-dark);
+  margin: 0;
+  line-height: 1.6;
+  font-size: var(--fs-body);
+}
+
+img{
+  display: block;
+  max-width: 100%;
 }
 ul {
   list-style-type: none;
@@ -81,50 +99,52 @@ a {
 }
 h1,
 h2,
-h3,
-h4 {
+h3 {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
-  line-height: 1.25;
+  line-height: 1.1;
   margin-bottom: 0.75rem;
-  font-family: var(--ff-primary);
 }
-h1 {
-  font-size: 3rem;
+
+h1{ font-size: var(--fs-h1);}
+h2{ font-size: var(--fs-h2);}
+h3{ font-size: var(--fs-h3);}
+
+.section__title {
+  margin-bottom: .25em;
 }
-h2 {
-  font-size: 2rem;
+
+.section__title--intro {
+  font-weight: var(--fw-reg);
 }
-h3 {
-  font-size: 1.25rem;
+
+.section__title--intro strong{
+  display: block;
 }
-h4 {
-  font-size: 0.875rem;
+
+.section__subtitle {
+  margin: 0;
+  font-size: var(--fs-h3);
+}
+.section__subtitle--intro,
+.section__subtitle--about {
+  background: var(--clr-accent);
+  font-family: var(--ff-secondary);
 }
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
 @media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  body {
-    font-size: 1rem;
+  :root {
+    --fs-h1: 4.5rem;
+    --fs-h2: 3.75rem;
+    --fs-h3: 1.5rem;
+    --fs-body: 1.125rem;
   }
   h1,
   h2,
-  h3,
-  h4 {
+  h3 {
     line-height: 1;
   }
 }
@@ -245,3 +265,4 @@ nav {
     color: var(--clr-primary-7);
   }
 }
+ 
