--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,12 @@ h3{ font-size: var(--fs-h3);}
   font-family: var(--ff-secondary);
   margin-bottom: 1em;
 }
+
+.section__subtitle--work{
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+  margin-bottom: 2em;
+}
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
@@ -382,6 +388,8 @@ nav {
 .about-me {
   max-width: 1000px;
   margin: 0 auto;
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
 }
 
 .about-me__img{
@@ -418,3 +426,35 @@ nav {
     z-index: 2;
   }
 }
+ /* My Work */
+
+ .my-work {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+  text-align: center;
+ }
+
+ .portfolio {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+ }
+ .portfolio__item {
+  background: var(--clr-accent);
+  overflow: hidden;
+ }
+ .portfolio_img {
+  transition: 
+  transform 750ms cubic-bezier(.5, 0, .5, 1),
+  opacity 250ms linear;
+ }
+
+ .portfolio__item:focus {
+  position: relative;
+  z-index: 2;
+ }
+ .portfolio_img:hover,
+ .portfolio__item:focus .portfolio_img {
+  transform: scale(1.2);
+  opacity: .75;
+
+ }
